# sqg

./: .gitignore  AGENTS.md  LICENSE  README.md  biome.jsonc  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build.yml  release.yml
.github/worksflows/: build.yml
editor/: .gitignore  astro.config.mjs  justfile  package.json
editor/docker/: justfile
examples/: justfile
examples/java-duckdb/: build.gradle.kts  queries.sql  settings.gradle.kts  sqg.yaml
examples/java-duckdb-benchmark/: build.gradle.kts  justfile  queries.sql  settings.gradle.kts  sqg.yaml
examples/java-postgres-benchmark/: .gitignore  build.gradle.kts  justfile  queries-duckdb.sql  queries.sql  settings.gradle.kts  sqg.yaml
examples/typescript-duckdb/: README.md  package.json  queries.sql  sqg.yaml
examples/typescript-sqlite/: README.md  package.json  pnpm-lock.yaml  queries.sql  sqg.yaml
examples/typescript-sqlite-benchmark/: .gitignore  README.md  package.json  queries.sql  sqg.yaml
skill/: README.md  SKILL.md  metadata.json
sqg/: .gitignore  README.md  biome.json  justfile  package.json  sqg  tsconfig.json  tsdown.config.ts
sqg-ui/: ARCHITECTURE.md  justfile  package.json
sqg-ui/frontend/: index.html  package.json  tsconfig.json
sqg-ui/server/: package.json  queries.sql  sqg.yaml  tsconfig.json  tsdown.config.ts
sqg/python/: main.py  pyproject.toml
sqg/python/tests/: test_duckdb.py  test_postgres.py  test_sqlite.py
sqg/src/: constants.ts  (+14 more)
sql-ide/: ARCHITECTURE.md  justfile  package.json
website/: astro.config.mjs  package.json  tsconfig.json
(+243 files in other folders)
