[project]
name = "sqg-test-python"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "duckdb>=1.5.0",
    "psycopg[binary]>=3.3.3",
    "pytest>=9.0.2",
    "pytz>=2026.1.post1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]
